--- a/Frontend/src/app/globals.css
+++ b/Frontend/src/app/globals.css
@@ -11,6 +11,7 @@
     --text-heading-color: #333D42;
     --line-color: #CCCCCC;
     --box-background: #E5EBEE;
+    --light-white-color: rgba(255,255,255,0.9);
     --main-color: #EF7575;
     --button-color: #EF9575;
     --light-button-color: #ef9575b3;
@@ -20,6 +21,12 @@
     --image-backround: #FFD4C5;
     --online-color: #0ec70ab3;
     --vote-down-color: #545AE8;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 @layer utilities {
@@ -41,6 +48,14 @@
   .middle-line::before {
     right: 0.5em;
     margin-left: -50%;
+  }
+
+  .blurry-bg::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    backdrop-filter: blur(2px);
   }
   
   .middle-line::after {
