--- a/Frontend/src/app/globals.css
+++ b/Frontend/src/app/globals.css
@@ -62,6 +62,15 @@
     left: 0.5em;
     margin-right: -50%;
   }
-  }
 
-  
+  @keyframes slide-in {
+    100% { transform: translateX(0%); }
+  }
+  .slider {
+    transform: translateX(100%);
+    animation: slide-in 0.3s forwards;
+  }
+  .active {
+    @apply bg-mainColor text-white
+  }
+}
