--- a/Frontend/src/app/globals.css
+++ b/Frontend/src/app/globals.css
@@ -12,6 +12,8 @@
     --line-color: #CCCCCC;
     --box-background: #E5EBEE;
     --light-white-color: rgba(255,255,255,0.9);
+    --image-block: #2b313c63;
+    --post-hover: #e5ebee6e;
     --main-color: #EF7575;
     --button-color: #EF9575;
     --light-button-color: #ef9575b3;
