--- a/Frontend/src/app/globals.css
+++ b/Frontend/src/app/globals.css
@@ -103,4 +103,8 @@
   	border-radius: 10px;
     background-color: var(--line-color);
   } 
+
+  .zoom-in:hover img {
+    @apply scale-[1.05] duration-100 ease-linear;
+  }
 }
